--- a/context/locales/ar.json
+++ b/context/locales/ar.json
@@ -3,10 +3,12 @@
     "home": "الرئيسية",
     "store": "المتجر",
     "ipad": "آيباد",
+    "mac": "ماك",
     "iphone": "آيفون",
     "watch": "الساعات",
     "airpods": "سماعات الأذن",
-    "tv": "التلفزيون والمنزل"
+    "tv": "التلفزيون والمنزل",
+    "vision": "رؤية"
   },
   "homePage": {
     "w1": "ايفون 15 برو",
